--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "yarn build"
+  command = "gatsby build"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
