--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   publish = "public"
   command = "gatsby build"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
